--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,25 @@
-name: hello-world
-on: push
+name: Semantic Release
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
-  my-job:
+  release:
     runs-on: ubuntu-latest
+    concurrency: release
+    permissions:
+      id-token: write
+      contents: write
+
     steps:
-      - name: my-step
-        run: echo "Hello World!"
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Python Semantic Release
+      uses: python-semantic-release/python-semantic-release@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        root_options: -c ./.semantic-release.json -v --format json
